optimize build time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,9 +44,14 @@ find_package(Boost REQUIRED COMPONENTS
 	log REQUIRED
 	)
 
+find_program(CCACHE_FOUND ccache)
+if(CCACHE_FOUND)
+	set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
+	set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
+endif(CCACHE_FOUND)
+
 if (NOT WIN32)
 	add_definitions(-DBOOST_LOG_DYN_LINK=1)
 endif ()
 
 add_subdirectory(src)
-
